# wedding-website

./: .gitignore  Claude.md  animation-plan.md  cabal.project  flake.nix  index.html  spago.yaml  wedding-frontend.cabal
.github/workflows/: deploy.yml
backend/: wedding-backend.cabal
backend/app/: Main.hs  Migrate.hs
backend/migrations/: V001__baseline.sql  V002__invitees_admin_videos.sql
backend/src/: Api.hs  Auth.hs  Db.hs  Upload.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
frontend/: index.html  wedding-frontend.cabal
frontend/src/: Main.hs
nixosModules/: backend.nix  database.nix  frontend.nix  wedding.nix
public/: animations.js  index.html  wedding-admin.js
scripts/: build-site.sh
secrets/: secrets.nix  wedding-admin-password-hash.age  wedding-admin-password.age  wedding-backend-env.age  wedding-db-password.age
shared/: wedding-shared.cabal
shared/src/Wedding/: Types.hs
site/: out.frefs.js  out.frefs.json  out.stats
src/: Main.hs  Main.purs
