cabal-version: 2.4
name:          wedding-frontend
version:       0.1.0
build-type:    Simple

executable wedding-frontend
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
      base        >= 4.12 && < 5
    , containers
    , reflex
    , reflex-dom
    , text
  default-language:   Haskell2010
  default-extensions:
      OverloadedStrings
    , ScopedTypeVariables
